pihole/06-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pihole
  name: pihole
  namespace: pihole-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      dnsConfig:
        nameservers:
        - 127.0.0.1
      hostAliases:
      - ip: "127.0.0.1"
        hostnames:
        - "pi.hole"
      containers:
      - image: pihole/pihole:v5.8.1
        imagePullPolicy: IfNotPresent
        name: pihole
        ports:
        - name: http-tcp
          containerPort: 80
          protocol: TCP
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: bootp
          containerPort: 67
          protocol: UDP
        livenessProbe:
          httpGet:
            path: /
            port: http-tcp
          initialDelaySeconds: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: http-tcp
          initialDelaySeconds: 25
          periodSeconds: 5
        resources:
          limits:
            cpu: "500m"
            memory: "1024Mi"
          requests:
            cpu: "250m"
            memory: "512Mi"
        volumeMounts:
          - name: pihole-pvc
            mountPath: '/etc/pihole'
          - name: dnsmasq-pvc
            mountPath: '/etc/dnsmasq.d'
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
      restartPolicy: Always
      volumes:
        - name: pihole-pvc
          persistentVolumeClaim:
            claimName: pihole-pvc
        - name: dnsmasq-pvc
          persistentVolumeClaim:
            claimName: dnsmasq-pvc
