pihole/07-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-services-udp
  namespace: pihole-ns
#  annotations:
#    metallb.universe.tf/allow-shared-ip: pihole
spec:
  loadBalancerIP: 192.168.0.111
  externalTrafficPolicy: Local
  ports:
    - name: dns-udp
      port: 53 
      protocol: UDP
    - name: bootp
      port: 67
      protocol: UDP
  selector:
    app: pihole
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-services-tcp
  namespace: pihole-ns
spec:
  loadBalancerIP: 192.168.0.112
  externalTrafficPolicy: Local
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
    - name: http-tcp
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    app: pihole
  type: LoadBalancer
