pihole/09-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole-ns
spec:
  rules:
  - host: pihole.local
    http:
      paths:
      - path: /
        backend:
          serviceName: pihole-services-tcp
          servicePort: http-tcp
  tls:
  - hosts:
    - pihole.local
